--- a/_src/sass/helpers/_variables.scss
+++ b/_src/sass/helpers/_variables.scss
@@ -12,7 +12,8 @@ $gap-tablet: 22px;
 $gap-phone: 21px;
 
 // breackpoints;
-$ph: 600px;
+$min-ph: 360px;
+$ph: 412px;
 $tb: 768px;
 $empty: 1000px;
 $dt: 1200px;
