--- a/_src/css/style.css
+++ b/_src/css/style.css
@@ -786,7 +786,7 @@ button {
       max-width: 405px;
       padding-right: 22px;
       padding-left: 22px; } }
-  @media screen and (max-width: 600px) {
+  @media screen and (max-width: 412px) {
     .container {
       max-width: 1142px;
       padding-right: 21px;
@@ -811,11 +811,11 @@ button {
 
 .phone-visibility {
   display: none; }
-  @media screen and (max-width: 600px) {
+  @media screen and (max-width: 412px) {
     .phone-visibility {
       display: block; } }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 412px) {
   .phone-hidden {
     display: none; } }
 
@@ -920,6 +920,15 @@ button {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center; }
+    @media screen and (max-width: 1000px) {
+      .header__logo {
+        width: 124px;
+        height: 18px;
+        margin-right: 0; } }
+    @media screen and (max-width: 412px) {
+      .header__logo {
+        width: 117px;
+        height: 17px; } }
 
 .container--header {
   max-width: 1696px; }
@@ -939,15 +948,17 @@ button {
               justify-content: space-between;
       -ms-flex-wrap: wrap;
           flex-wrap: wrap; } }
+  @media screen and (max-width: 768px) {
+    .container--header {
+      padding-top: 42px;
+      padding-bottom: 0; } }
+  @media screen and (max-width: 412px) {
+    .container--header {
+      padding-top: 25px; } }
 
 .logo {
   -ms-flex-negative: 0;
       flex-shrink: 0; }
-  @media screen and (max-width: 1000px) {
-    .logo {
-      width: 124px;
-      height: 18px;
-      margin-right: 0; } }
 
 .nav__list {
   display: -webkit-box;
@@ -1263,7 +1274,12 @@ button {
       margin-top: -213px; } }
   @media screen and (max-width: 768px) {
     .promo {
-      padding-top: 107%; } }
+      padding-top: 107%;
+      margin-top: -143px; } }
+  @media screen and (max-width: 412px) {
+    .promo {
+      padding-top: 155%;
+      margin-top: -126px; } }
   .promo__img-wrap {
     width: 100%;
     height: 100%;
@@ -1275,5 +1291,122 @@ button {
     top: 0; }
   .promo__img {
     width: 100%; }
+  .promo__inner {
+    position: absolute;
+    position: absolute;
+    left: 50%;
+    -webkit-transform: translateX(-50%);
+        -ms-transform: translateX(-50%);
+            transform: translateX(-50%);
+    top: 195px;
+    max-width: 807px;
+    width: 100%; }
+    @media screen and (max-width: 1440px) {
+      .promo__inner {
+        max-width: 484px;
+        top: 159px; } }
+    @media screen and (max-width: 1200px) {
+      .promo__inner {
+        top: 175px; } }
+    @media screen and (max-width: 1000px) {
+      .promo__inner {
+        max-width: 367px; } }
+    @media screen and (max-width: 412px) {
+      .promo__inner {
+        top: 159px;
+        max-width: 323px; } }
+  .promo__title {
+    color: #405A26;
+    font-weight: 600;
+    font-size: 55px;
+    line-height: 60px;
+    letter-spacing: -0.02em;
+    margin-bottom: 39px; }
+    @media screen and (max-width: 1440px) {
+      .promo__title {
+        font-size: 33px;
+        line-height: 37px;
+        margin-bottom: 23px; } }
+    @media screen and (max-width: 1000px) {
+      .promo__title {
+        font-size: 25px;
+        line-height: 30px;
+        margin-bottom: 21px; } }
+    @media screen and (max-width: 412px) {
+      .promo__title {
+        font-size: 22px;
+        margin-bottom: 19px; } }
+
+.promo-slogan {
+  margin-bottom: 51px; }
+  @media screen and (max-width: 1440px) {
+    .promo-slogan {
+      margin-bottom: 23px; } }
+  @media screen and (max-width: 1200px) {
+    .promo-slogan {
+      margin-bottom: 30px; } }
+  @media screen and (max-width: 1000px) {
+    .promo-slogan {
+      margin-bottom: 39px; } }
+  @media screen and (max-width: 412px) {
+    .promo-slogan {
+      margin-bottom: 33px; } }
+  .promo-slogan__text {
+    font-weight: normal;
+    font-size: 24px;
+    line-height: 20px;
+    color: #202020;
+    position: relative;
+    padding-left: 117px; }
+    .promo-slogan__text::before {
+      content: "";
+      position: absolute;
+      top: 50%;
+      -webkit-transform: translateY(-50%);
+          -ms-transform: translateY(-50%);
+              transform: translateY(-50%);
+      left: 0;
+      height: 5px;
+      width: 90px;
+      background-color: #666366; }
+      @media screen and (max-width: 1000px) {
+        .promo-slogan__text::before {
+          width: 70px; } }
+    @media screen and (max-width: 1440px) {
+      .promo-slogan__text {
+        font-size: 20px; } }
+    @media screen and (max-width: 1000px) {
+      .promo-slogan__text {
+        padding-left: 90px;
+        font-size: 18px; } }
+    @media screen and (max-width: 412px) {
+      .promo-slogan__text {
+        font-size: 16px; } }
+  .promo-slogan__link {
+    max-width: 369px;
+    margin-left: auto;
+    margin-right: 93px;
+    padding-left: 40px;
+    font-size: 25px;
+    letter-spacing: -0.02em;
+    padding-top: 17px;
+    padding-bottom: 17px; }
+    @media screen and (max-width: 1440px) {
+      .promo-slogan__link {
+        max-width: 273px;
+        padding-top: 5px;
+        padding-bottom: 5px;
+        padding-left: 8px;
+        margin-right: 0;
+        margin-left: 117px;
+        font-size: 22px; } }
+    @media screen and (max-width: 1000px) {
+      .promo-slogan__link {
+        max-width: 258px;
+        margin-left: auto;
+        margin-right: auto;
+        padding-top: 3px;
+        padding-bottom: 4px;
+        font-size: 20px; } }
 
 /*# sourceMappingURL=style.css.map */
