--- a/_src/sass/blocks/promo.scss
+++ b/_src/sass/blocks/promo.scss
@@ -19,6 +19,12 @@
 
   @include mw($tb) {
     padding-top: 107%;
+    margin-top: -143px;
+  }
+
+  @include mw($ph) {
+    padding-top: 155%;
+    margin-top: -126px;
   }
 
 
@@ -36,20 +42,144 @@
 
 
 
-  &__inner {}
+  &__inner {
+    position: absolute;
+    @include centered(x);
+    top: 195px;
+    max-width: 807px;
+    width: 100%;
 
-  &__title {}
+    @include mw($ldt) {
+      max-width: 484px;
+      top: 159px;
+    }
 
-  &__slogan {}
+    @include mw($dt) {
+      top: 175px;
+    }
+
+    @include mw($empty) {
+      max-width: 367px;
+    }
+
+    @include mw($ph) {
+      top: 159px;
+      max-width: 323px;
+    }
+  }
+
+  &__title {
+    color: $green-two;
+    font-weight: 600;
+    font-size: 55px;
+    line-height: 60px;
+    letter-spacing: -0.02em;
+    margin-bottom: 39px;
+
+    @include mw($ldt) {
+      font-size: 33px;
+      line-height: 37px;
+      margin-bottom: 23px;
+    }
+
+    @include mw($empty) {
+      font-size: 25px;
+      line-height: 30px;
+      margin-bottom: 21px;
+    }
+
+    @include mw($ph) {
+      font-size: 22px;
+      margin-bottom: 19px;
+    }
+  }
+
 }
 
-.container {}
 
 .promo-slogan {
+  margin-bottom: 51px;
 
-  &__text {}
+  @include mw($ldt) {
+    margin-bottom: 23px;
+  }
 
-  &__link {}
+  @include mw($dt) {
+    margin-bottom: 30px;
+  }
+
+  @include mw($empty) {
+    margin-bottom: 39px;
+  }
+
+  @include mw($ph) {
+    margin-bottom: 33px;
+  }
+
+  &__text {
+    font-weight: normal;
+    font-size: 24px;
+    line-height: 20px;
+    color: $text-dark;
+    position: relative;
+    padding-left: 117px;
+
+    &::before {
+      content: "";
+      @include centered(y);
+      left: 0;
+      height: 5px;
+      width: 90px;
+      background-color: #666366;
+
+      @include mw($empty) {
+        width: 70px;
+      }
+    }
+
+    @include mw($ldt) {
+      font-size: 20px;
+    }
+
+    @include mw($empty) {
+      padding-left: 90px;
+      font-size: 18px;
+    }
+
+    @include mw($ph) {
+      font-size: 16px;
+    }
+  }
+
+  &__link {
+    max-width: 369px;
+    margin-left: auto;
+    margin-right: 93px;
+    padding-left: 40px;
+    font-size: 25px;
+    letter-spacing: -0.02em;
+    padding-top: 17px;
+    padding-bottom: 17px;
+
+    @include mw($ldt) {
+      max-width: 273px;
+      padding-top: 5px;
+      padding-bottom: 5px;
+      padding-left: 8px;
+      margin-right: 0;
+      margin-left: 117px;
+      font-size: 22px;
+    }
+
+    @include mw($empty) {
+      max-width: 258px;
+      margin-left: auto;
+      margin-right: auto;
+      padding-top: 3px;
+      padding-bottom: 4px;
+      font-size: 20px;
+    }
+  }
 }
 
 .record-link {
