--- a/_src/sass/helpers/_variables.scss
+++ b/_src/sass/helpers/_variables.scss
@@ -4,10 +4,10 @@ $white: #ffffff;
 $bg: #F6F6F6;
 
 // sizes;
-$width-dt: 1100px;
+$width-dt: 1524px;
 $width-tablet: 361px;
 $width-phone: 1100px;
-$gap: 20px;
+$gap: 0;
 $gap-tablet: 22px;
 $gap-phone: 21px;
 
