--- a/_src/pug/helpers/arrays.pug
+++ b/_src/pug/helpers/arrays.pug
@@ -1,3 +1,5 @@
 - let n = 0
 - const favFolder = 'fav';
 - const catalogItems = ['ГОСТИНЫЕ', 'СПАЛЬНИ', 'ДИВАНЫ', 'ДЕТСКИЕ', 'КУХНИ', 'СТОЛЫ', 'ОБЕДЕННЫЕ СТОЛЫ', 'СТУЛЬЯ', 'МАТРАСЫ', 'КРОВАТИ', 'ПРИХОЖИЕ', 'БИБЛИОТЕКИ', 'ШКАФЫ', 'ШКАФЫ-КУПЕ', 'КОМОДЫ', 'ТУМБЫ', 'КРЕСЛА', 'ЗЕРКАЛА', 'ПОЛКИ', 'КАРТИНЫ', 'РАСПРОДАЖА', 'АКЦИИ']
+
+- const benefit_list = [['покупаете квартиру','Раздумываете над планировкой, палитрой или\u00A0общей концепцией'],['Делаете ремонт','Планируете ремонт сами,\u00A0но\u00A0не\u00A0уверены, учли\u00A0ли\u00A0все достоинства и\u00A0недостатки комнаты'],['Хотите преобразить интерьер','Думаете изменить атмосферу\u00A0в\u00A0уже годами вывереном интерьере без\u00A0ремонта'],['Выбираете мебель','Нет сил и времени ходить\u00A0по\u00A0магазинам в\u00A0поисках идеала'],['раздумываете над\u00A0декором','Сомневаетесь, какой выбрать ковер в спальню и подойдет ли к нему картина'],['Мечтаете об\u00A0инстаграмном доме','И хотите сэкономить на\u00A0дизайн-проекте']]
