--- a/_src/sass/blocks/header.scss
+++ b/_src/sass/blocks/header.scss
@@ -8,6 +8,10 @@
     padding-top: 56px;
     padding-bottom: 56px;
 
+    @include mw($dt) {
+      padding-top: 45px;
+    }
+
     @include mw($tb) {
       padding-top: 54px;
       padding-bottom: 54px;
@@ -25,6 +29,7 @@
     }
 
     @include mw($dt) {
+      padding-top: 7px;
       width: 17%;
       margin-right: 6%;
     }
