--- a/_src/sass/blocks/promo.scss
+++ b/_src/sass/blocks/promo.scss
@@ -2,14 +2,14 @@
   margin-top: -174px;
   position: relative;
   height: 0;
-  padding-top: 50%;
+  padding-top: 51.5%;
 
   @include mw($ldt) {
-    padding-top: 48%;
+    padding-top: 49%;
   }
 
   @include mw($dt) {
-    margin-top: -162px;
+    margin-top: -151px;
     padding-top: 60%;
   }
 
@@ -38,6 +38,8 @@
 
   &__img {
     width: 100%;
+    max-height: 100%;
+    height: 100%;
   }
 
 
@@ -45,17 +47,18 @@
   &__inner {
     position: absolute;
     @include centered(x);
-    top: 195px;
-    max-width: 807px;
+    top: 218px;
+    max-width: 826px;
     width: 100%;
 
     @include mw($ldt) {
-      max-width: 484px;
-      top: 159px;
+      max-width: 587px;
+      top: 172px;
     }
 
     @include mw($dt) {
       top: 175px;
+      max-width: 486px;
     }
 
     @include mw($empty) {
@@ -86,7 +89,7 @@
     @include mw($ldt) {
       font-size: 33px;
       line-height: 37px;
-      margin-bottom: 23px;
+      margin-bottom: 24px;
     }
 
     @include mw($empty) {
@@ -108,7 +111,7 @@
   margin-bottom: 51px;
 
   @include mw($ldt) {
-    margin-bottom: 23px;
+    margin-bottom: 26px;
   }
 
   @include mw($dt) {
@@ -139,6 +142,11 @@
       width: 90px;
       background-color: #666366;
 
+      @include mw($ldt) {
+        transform: none;
+        top: 5px;
+      }
+
       @include mw($empty) {
         width: 70px;
       }
@@ -150,6 +158,7 @@
 
     @include mw($ldt) {
       font-size: 20px;
+      padding-left: 130px;
     }
 
     @include mw($empty) {
@@ -169,12 +178,12 @@
   &__link {
     max-width: 369px;
     margin-left: auto;
-    margin-right: 93px;
+    margin-right: 107px;
     padding-left: 40px;
     font-size: 25px;
     letter-spacing: -0.02em;
-    padding-top: 17px;
-    padding-bottom: 17px;
+    padding-top: 9px;
+    padding-bottom: 12px;
     border: none;
     @include btn-border-drawing($green-two, $text-dark, 2px, bottom, right);
 
@@ -186,8 +195,12 @@
       padding-bottom: 5px;
       padding-left: 8px;
       margin-right: 0;
-      margin-left: 117px;
+      margin-left: 131px;
       font-size: 22px;
+
+      & .record-link__text {
+        margin-left: 18px;
+      }
     }
 
     @include mw($empty) {
@@ -214,11 +227,16 @@
 
 
   &__icon {
-    width: 90px;
-    height: 49px;
+    width: 112px;
+    height: 65px;
     background-image: url(/img/svg/record-green.svg);
     background-repeat: no-repeat;
     background-size: contain;
+
+    @include mw($ldt) {
+      width: 87px;
+      height: 51px;
+    }
   }
 
 }
