--- a/_src/pug/modules/_footer.pug
+++ b/_src/pug/modules/_footer.pug
@@ -1,4 +1,4 @@
-footer.main-footer
-  .main-footer__inner.container
-    p.main-footer__copy © 2020
-    a.main-footer__politic.hover-opacity(href="/politic.html") Политика конфиденциальности
+//- footer.main-footer
+//- .main-footer__inner.container
+  p.main-footer__copy © 2020
+  a.main-footer__politic.hover-opacity(href="/politic.html") Политика конфиденциальности
