--- a/_src/css/style.css
+++ b/_src/css/style.css
@@ -971,9 +971,10 @@ button {
         height: 100%;
         max-height: 100%;
         left: -434px; } }
-    @media screen and (max-width: 1200px) {
+    @media screen and (max-width: 1000px) {
       .benefit__img {
-        width: 706px; } }
+        width: 1300px;
+        left: -568px; } }
   .benefit__title {
     font-size: 60px;
     line-height: 66px;
@@ -996,9 +997,9 @@ button {
       .benefit__title {
         max-width: none;
         width: 100%;
-        text-align: center;
-        margin-top: 122px;
-        margin-bottom: 50px; } }
+        margin-top: 125px;
+        margin-bottom: 64px;
+        padding-left: 12px; } }
   .benefit__list {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -1047,20 +1048,50 @@ button {
     @media screen and (max-width: 1000px) {
       .benefit__item {
         width: 100%;
-        padding-left: 132px;
+        padding-left: 141px;
         padding-right: 0;
-        padding-top: 53px; }
+        padding-top: 66px; }
         .benefit__item:nth-child(1) {
           padding-top: 0; }
         .benefit__item:nth-child(2) {
-          padding-top: 73px; }
-        .benefit__item:nth-child(5), .benefit__item:nth-child(6) {
-          padding-top: 46px; } }
+          padding-top: 43px; }
+        .benefit__item:nth-child(5) {
+          padding-top: 42px;
+          padding-bottom: 0; }
+        .benefit__item:nth-child(6) {
+          padding-top: 46px; }
+        .benefit__item:nth-child(4) {
+          padding-top: 20px; } }
     .benefit__item--even {
       border-left: 1px solid rgba(64, 90, 38, 0.2); }
       @media screen and (max-width: 1000px) {
         .benefit__item--even {
           border-left: none; } }
+    @media screen and (max-width: 1000px) {
+      .benefit__item--1 {
+        -webkit-box-ordinal-group: 1;
+            -ms-flex-order: 0;
+                order: 0; }
+      .benefit__item--2 {
+        -webkit-box-ordinal-group: 5;
+            -ms-flex-order: 4;
+                order: 4; }
+      .benefit__item--3 {
+        -webkit-box-ordinal-group: 2;
+            -ms-flex-order: 1;
+                order: 1; }
+      .benefit__item--4 {
+        -webkit-box-ordinal-group: 5;
+            -ms-flex-order: 4;
+                order: 4; }
+      .benefit__item--5 {
+        -webkit-box-ordinal-group: 4;
+            -ms-flex-order: 3;
+                order: 3; }
+      .benefit__item--6 {
+        -webkit-box-ordinal-group: 7;
+            -ms-flex-order: 6;
+                order: 6; } }
 
 .line-block {
   position: relative;
@@ -1078,11 +1109,17 @@ button {
     @media screen and (max-width: 1200px) {
       .line-block::before {
         top: 69px; } }
+    @media screen and (max-width: 768px) {
+      .line-block::before {
+        top: 57px; } }
   .line-block::after {
     bottom: 73px; }
     @media screen and (max-width: 1200px) {
       .line-block::after {
         bottom: 69px; } }
+    @media screen and (max-width: 768px) {
+      .line-block::after {
+        bottom: 57px; } }
   @media screen and (max-width: 1263px) {
     .line-block {
       padding-left: 68px;
@@ -1095,6 +1132,10 @@ button {
     .line-block {
       padding-left: 123px;
       padding-right: 123px; } }
+  @media screen and (max-width: 768px) {
+    .line-block {
+      padding-left: 0;
+      padding-right: 0; } }
 
 .container--border {
   position: relative; }
@@ -1103,8 +1144,12 @@ button {
       max-width: 1063px; } }
   @media screen and (max-width: 1000px) {
     .container--border {
-      padding-left: 80px;
-      padding-right: 80px; } }
+      padding-left: 73px;
+      padding-right: 80px;
+      padding-bottom: 57px; } }
+  @media screen and (max-width: 768px) {
+    .container--border {
+      max-width: 563px; } }
   .container--border::before, .container--border::after {
     content: "";
     position: absolute;
@@ -1145,6 +1190,9 @@ button {
     @media screen and (max-width: 1200px) {
       .benefit-item__img {
         left: 9px; } }
+    @media screen and (max-width: 1000px) {
+      .benefit-item__img {
+        left: 0; } }
     .benefit-item__img--1 {
       width: 160px;
       height: 164px;
@@ -1166,6 +1214,11 @@ button {
           width: 122px;
           height: 125px;
           top: 117px; } }
+      @media screen and (max-width: 1000px) {
+        .benefit-item__img--1 {
+          width: 122px;
+          height: 123px;
+          top: -17px; } }
     .benefit-item__img--2 {
       width: 164px;
       height: 176px;
@@ -1187,6 +1240,11 @@ button {
           width: 122px;
           height: 125px;
           top: 117px; } }
+      @media screen and (max-width: 1000px) {
+        .benefit-item__img--2 {
+          width: 122px;
+          height: 123px;
+          top: 45px; } }
     .benefit-item__img--3 {
       width: 152px;
       height: 169px;
@@ -1204,6 +1262,11 @@ button {
           width: 122px;
           height: 125px;
           top: 10px; } }
+      @media screen and (max-width: 1000px) {
+        .benefit-item__img--3 {
+          width: 122px;
+          height: 123px;
+          top: 69px; } }
     .benefit-item__img--4 {
       width: 143px;
       height: 156px;
@@ -1221,6 +1284,11 @@ button {
           width: 122px;
           height: 125px;
           top: 10px; } }
+      @media screen and (max-width: 1000px) {
+        .benefit-item__img--4 {
+          width: 122px;
+          height: 123px;
+          top: 33px; } }
     .benefit-item__img--5 {
       width: 152px;
       height: 152px;
@@ -1243,6 +1311,11 @@ button {
           width: 122px;
           height: 125px;
           top: 40px; } }
+      @media screen and (max-width: 1000px) {
+        .benefit-item__img--5 {
+          width: 122px;
+          height: 123px;
+          top: 45px; } }
     .benefit-item__img--6 {
       width: 154px;
       height: 154px;
@@ -1265,6 +1338,11 @@ button {
           width: 122px;
           height: 125px;
           top: 29px; } }
+      @media screen and (max-width: 1000px) {
+        .benefit-item__img--6 {
+          width: 122px;
+          height: 123px;
+          top: 42px; } }
   .benefit-item__title {
     color: #405A26;
     font-weight: 600;
@@ -1275,6 +1353,9 @@ button {
     @media screen and (max-width: 1440px) {
       .benefit-item__title {
         font-size: 18px; } }
+    @media screen and (max-width: 1000px) {
+      .benefit-item__title {
+        line-height: 22px; } }
   .benefit-item__text {
     font-weight: normal;
     font-size: 20px;
@@ -1928,7 +2009,7 @@ button {
       margin-top: -213px; } }
   @media screen and (max-width: 768px) {
     .promo {
-      padding-top: 107%;
+      padding-top: 106%;
       margin-top: -143px; } }
   @media screen and (max-width: 412px) {
     .promo {
@@ -1967,7 +2048,8 @@ button {
         max-width: 486px; } }
     @media screen and (max-width: 1000px) {
       .promo__inner {
-        max-width: 367px; } }
+        max-width: 367px;
+        top: 165px; } }
     @media screen and (max-width: 412px) {
       .promo__inner {
         top: 159px;
