--- a/_src/sass/blocks/benefit.scss
+++ b/_src/sass/blocks/benefit.scss
@@ -42,8 +42,13 @@
       left: -434px;
     }
 
+    @include mw($empty) {
+      width: 1300px;
+      left: -568px;
+    }
+
     @include mw($dt) {
-      width: 706px;
+      // width: 706px;
     }
   }
 
@@ -71,9 +76,9 @@
     @include mw($empty) {
       max-width: none;
       width: 100%;
-      text-align: center;
-      margin-top: 122px;
-      margin-bottom: 50px;
+      margin-top: 125px;
+      margin-bottom: 64px;
+      padding-left: 12px;
     }
   }
 
@@ -141,21 +146,29 @@
 
     @include mw($empty) {
       width: 100%;
-      padding-left: 132px;
+      padding-left: 141px;
       padding-right: 0;
-      padding-top: 53px;
+      padding-top: 66px;
 
       &:nth-child(1) {
         padding-top: 0;
       }
 
       &:nth-child(2) {
-        padding-top: 73px;
+        padding-top: 43px;
       }
 
-      &:nth-child(5),
+      &:nth-child(5) {
+        padding-top: 42px;
+        padding-bottom: 0;
+      }
+
       &:nth-child(6) {
         padding-top: 46px;
+      }
+
+      &:nth-child(4) {
+        padding-top: 20px;
       }
 
 
@@ -163,30 +176,7 @@
 
     }
 
-    // &:nth-child(2),
-    // &:nth-child(1) {
-    //   padding-top: 174px;
 
-    //   @include mw($ldt) {
-    //     padding-top: 156px;
-    //   }
-
-    //   @include mw($dt) {
-    //     padding-top: 137px;
-    //   }
-    // }
-
-    // &:nth-child(5),
-    // &:nth-child(6) {
-    //   padding-bottom: 150px;
-
-    //   @include mw($dt) {
-    //     padding-bottom: 79px;
-    //     padding-top: 42px;
-    //   }
-
-
-    // }
 
     &--even {
       border-left: 1px solid rgba(64, 90, 38, 0.2);
@@ -195,6 +185,32 @@
         border-left: none;
       }
 
+    }
+
+    @include mw($empty) {
+      &--1 {
+        order: 0;
+      }
+
+      &--2 {
+        order: 4;
+      }
+
+      &--3 {
+        order: 1;
+      }
+
+      &--4 {
+        order: 4;
+      }
+
+      &--5 {
+        order: 3;
+      }
+
+      &--6 {
+        order: 6;
+      }
     }
 
   }
@@ -222,6 +238,10 @@
     @include mw($dt) {
       top: 69px;
     }
+
+    @include mw($tb) {
+      top: 57px;
+    }
   }
 
   &::after {
@@ -229,6 +249,10 @@
 
     @include mw($dt) {
       bottom: 69px;
+    }
+
+    @include mw($tb) {
+      bottom: 57px;
     }
   }
 
@@ -246,6 +270,16 @@
     padding-left: 123px;
     padding-right: 123px;
   }
+
+  @include mw($tb) {
+    padding-left: 0;
+    padding-right: 0;
+    // max-width: 563px;
+    // padding-left: 22px;
+    // padding-right: 22px;
+    // margin-right: auto;
+    // margin-left: auto;
+  }
 }
 
 .container {
@@ -258,8 +292,13 @@
     }
 
     @include mw($empty) {
-      padding-left: 80px;
+      padding-left: 73px;
       padding-right: 80px;
+      padding-bottom: 57px;
+    }
+
+    @include mw($tb) {
+      max-width: 563px;
     }
 
     &::before,
@@ -317,6 +356,10 @@
       left: 9px;
     }
 
+    @include mw($empty) {
+      left: 0;
+    }
+
     &--1 {
       width: 160px;
       height: 164px;
@@ -335,6 +378,12 @@
         width: 122px;
         height: 125px;
         top: 117px;
+      }
+
+      @include mw($empty) {
+        width: 122px;
+        height: 123px;
+        top: -17px;
       }
     }
 
@@ -357,6 +406,12 @@
         height: 125px;
         top: 117px;
       }
+
+      @include mw($empty) {
+        width: 122px;
+        height: 123px;
+        top: 45px;
+      }
     }
 
 
@@ -378,6 +433,12 @@
         height: 125px;
         top: 10px;
       }
+
+      @include mw($empty) {
+        width: 122px;
+        height: 123px;
+        top: 69px;
+      }
     }
 
     &--4 {
@@ -396,6 +457,12 @@
         width: 122px;
         height: 125px;
         top: 10px;
+      }
+
+      @include mw($empty) {
+        width: 122px;
+        height: 123px;
+        top: 33px;
       }
     }
 
@@ -419,6 +486,12 @@
         height: 125px;
         top: 40px;
       }
+
+      @include mw($empty) {
+        width: 122px;
+        height: 123px;
+        top: 45px;
+      }
     }
 
     &--6 {
@@ -441,6 +514,12 @@
         height: 125px;
         top: 29px;
       }
+
+      @include mw($empty) {
+        width: 122px;
+        height: 123px;
+        top: 42px;
+      }
     }
   }
 
@@ -457,6 +536,10 @@
     @include mw($ldt) {
       font-size: 18px;
     }
+
+    @include mw($empty) {
+      line-height: 22px;
+    }
   }
 
   &__text {
@@ -469,5 +552,6 @@
       font-size: 18px;
       line-height: 22px;
     }
+
   }
 }
