--- a/_src/sass/blocks/1-header.scss
+++ b/_src/sass/blocks/1-header.scss
@@ -41,6 +41,14 @@
       margin-right: 0;
     }
 
+    @include mw($ph) {
+      margin-top: 53px;
+    }
+
+    @include mw($min-ph) {
+      margin-top: 43px;
+    }
+
 
   }
 
