--- a/_src/sass/blocks/2-promo.scss
+++ b/_src/sass/blocks/2-promo.scss
@@ -23,8 +23,12 @@
   }
 
   @include mw($ph) {
-    padding-top: 155%;
-    margin-top: -126px;
+    padding-top: 157%;
+    margin-top: -132px;
+  }
+
+  @include mw($min-ph) {
+    padding-top: 162%;
   }
 
 
@@ -67,15 +71,13 @@
     }
 
     @include mw($ph) {
-      top: 159px;
-      max-width: 323px;
+      top: 165px;
+      max-width: 335px;
     }
 
     @include mw($min-ph) {
-      // transform: none;
-      // width: calc(100% - 85px);
-      // left: 45px;
-      max-width: 271px;
+      top: 171px;
+      max-width: 274px;
     }
   }
 
@@ -102,6 +104,12 @@
     @include mw($ph) {
       font-size: 22px;
       margin-bottom: 19px;
+      margin-left: 13px;
+      line-height: 25px;
+    }
+
+    @include mw($min-ph) {
+      margin-left: 2px;
     }
   }
 
@@ -125,6 +133,10 @@
 
   @include mw($ph) {
     margin-bottom: 33px;
+  }
+
+  @include mw($min-ph) {
+    margin-bottom: 24px;
   }
 
   &__text {
@@ -152,8 +164,14 @@
         width: 70px;
       }
 
+      @include mw($ph) {
+        width: 50px;
+        top: 7px;
+      }
+
       @include mw($min-ph) {
         width: 43px;
+        height: 3px;
       }
     }
 
@@ -169,10 +187,13 @@
 
     @include mw($ph) {
       font-size: 16px;
+      margin-left: 14px;
+      padding-left: 74px;
     }
 
     @include mw($min-ph) {
       padding-left: 63px;
+      margin-left: 3px;
     }
   }
 
