--- a/_src/sass/blocks/3-benefit.scss
+++ b/_src/sass/blocks/3-benefit.scss
@@ -25,7 +25,7 @@
 
   &__img {
     @include centered(y);
-    height: 874px;
+    height: 100%;
     width: 874px;
     border-radius: 50%;
     border: 1px solid rgba(64, 90, 38, 0.3);
@@ -47,8 +47,9 @@
       left: -568px;
     }
 
-    @include mw($dt) {
-      // width: 706px;
+    @include mw(600px) {
+      width: 1284px;
+      left: -607px;
     }
   }
 
@@ -79,6 +80,20 @@
       margin-top: 125px;
       margin-bottom: 64px;
       padding-left: 12px;
+    }
+
+    @include mw(600px) {
+      margin-top: 95px;
+      font-size: 37px;
+      line-height: 40px;
+      margin-bottom: 56px;
+    }
+
+    @include mw($min-ph) {
+      font-size: 33px;
+      line-height: 34px;
+      margin-top: 105px;
+      margin-bottom: 60px;
     }
   }
 
@@ -176,6 +191,60 @@
 
     }
 
+    @include mw(600px) {
+      padding-left: 134px;
+      padding-left: 39%;
+      padding-top: 35px;
+
+      &:nth-child(5) {
+        padding-top: 35px;
+        padding-bottom: 0;
+      }
+
+      &:nth-child(4) {
+        padding-top: 35px;
+      }
+
+      &:nth-child(6) {
+        padding-top: 58px;
+      }
+
+
+
+
+    }
+
+
+
+    @include mw(380px) {
+      padding-left: 102px;
+    }
+
+    @include mw($min-ph) {
+      padding-top: 38px;
+
+      &:nth-child(5) {
+        padding-top: 38px;
+      }
+
+      &:nth-child(6) {
+        padding-top: 38px;
+      }
+
+      &:nth-child(4) {
+        padding-top: 0;
+      }
+
+      &:nth-child(4) .benefit-item__box {
+        padding-top: 18px;
+      }
+
+
+    }
+
+    @include mw(359px) {
+      padding-left: 27%;
+    }
 
 
     &--even {
@@ -229,6 +298,7 @@
     height: 1px;
     background-color: rgba(64, 90, 38, 0.2);
     left: 0;
+    z-index: 1;
 
   }
 
@@ -242,6 +312,10 @@
     @include mw($tb) {
       top: 57px;
     }
+
+    @include mw(600px) {
+      top: 36px;
+    }
   }
 
   &::after {
@@ -253,6 +327,10 @@
 
     @include mw($tb) {
       bottom: 57px;
+    }
+
+    @include mw(600px) {
+      top: 36px;
     }
   }
 
@@ -299,7 +377,23 @@
 
     @include mw($tb) {
       max-width: 563px;
+      padding-left: 13%;
+      padding-right: 14%;
     }
+
+    @include mw(600px) {
+      margin-left: 22px;
+      margin-right: 22px;
+      padding-left: 13px;
+      padding-right: 10px;
+      padding-bottom: 23px;
+    }
+
+    @include mw(380px) {
+      margin-left: 14px;
+      margin-right: 14px;
+    }
+
 
     &::before,
     &::after {
@@ -360,6 +454,8 @@
       left: 0;
     }
 
+
+
     &--1 {
       width: 160px;
       height: 164px;
@@ -384,6 +480,11 @@
         width: 122px;
         height: 123px;
         top: -17px;
+      }
+
+      @include mw(600px) {
+        width: 35%;
+        top: -7px;
       }
     }
 
@@ -439,6 +540,10 @@
         height: 123px;
         top: 69px;
       }
+
+      @include mw(600px) {
+        top: 29px;
+      }
     }
 
     &--4 {
@@ -463,6 +568,10 @@
         width: 122px;
         height: 123px;
         top: 33px;
+      }
+
+      @include mw(600px) {
+        top: 47px;
       }
     }
 
@@ -492,6 +601,11 @@
         height: 123px;
         top: 45px;
       }
+
+      @include mw(600px) {
+        top: 28px;
+        width: 109px;
+      }
     }
 
     &--6 {
@@ -520,6 +634,20 @@
         height: 123px;
         top: 42px;
       }
+
+      @include mw(600px) {
+        top: 53px;
+        width: 113px;
+      }
+    }
+
+    @include mw(380px) {
+      width: 91px;
+      top: 0;
+    }
+
+    @include mw(359px) {
+      width: 68px;
     }
   }
 
@@ -539,6 +667,14 @@
 
     @include mw($empty) {
       line-height: 22px;
+    }
+
+    @include mw(600px) {
+      margin-bottom: 8px;
+    }
+
+    @include mw($ph) {
+      margin-bottom: 12px;
     }
   }
 
